--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,42 +5,91 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:_3DSTranslationTool"
         mc:Ignorable="d"
-        Title="3DS文本翻译器" Height="720" Width="1280">
-    <Grid x:Name="MainGrid" Background="#FFA2A2A2">
-        <DockPanel>
-            <Menu x:Name="MainMenu" DockPanel.Dock="Top" Height="30">
-                <MenuItem Header="文件" Height="30">
-                    <MenuItem Name="OpenFile" Header="打开"></MenuItem>
-                    <MenuItem Name="CloseFile" Header="关闭"></MenuItem>
-                    <MenuItem Name="FileHistory" Header="最近文件"></MenuItem>
-                </MenuItem>
-                <MenuItem Header="编辑" Height="30"></MenuItem>
-                <MenuItem Header="选项" Height="30"></MenuItem>
-                <MenuItem Header="关于" Height="30"></MenuItem>
-            </Menu>
+        Title="3DS翻译测试工具" Height="720" Width="1280" MinWidth="1280" MinHeight="720">
+    <Grid x:Name="MainGrid" Background="#FFA2A2A2" Margin="0">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="240*" MinWidth="320" MaxWidth="360"/>
+            <ColumnDefinition Width="640*"/>
+        </Grid.ColumnDefinitions>
+        <GridSplitter Grid.Column="0" Width="2" Background="Black" Panel.ZIndex="2"/>
 
-            <TreeView x:Name="DirectoryView" Width="300" HorizontalAlignment="Left" Margin="0,0,0,39" Background="White" AllowDrop="True">
-                <TreeView.Resources>
-                    <HierarchicalDataTemplate DataType="{x:Type local:DirectoryRecord}"
-                                  ItemsSource="{Binding Directories}" >
-                        <StackPanel Orientation="Horizontal">
-                            <Image Width="16" Height="16" >
-                                <Image.OpacityMask>
-                                    <ImageBrush ImageSource="Resources/folder.png"/>
-                                </Image.OpacityMask>
-                            </Image>
-                            <TextBlock Text="{Binding Info.Name}"/>
-                        </StackPanel>
-                    </HierarchicalDataTemplate>
-                </TreeView.Resources>
-            </TreeView>
+        <Border x:Name="LeftGridBorder" Grid.Row="0" BorderBrush="Black" BorderThickness="1" MinWidth="240">
+            <Grid x:Name="LeftGrid" Margin="0,2,0,0" Background="White">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
 
-            <StatusBar x:Name="CurrentTextStatus" DockPanel.Dock="Bottom" Height="40" Margin="0,0,2,0" VerticalAlignment="Bottom" Width="1273" HorizontalAlignment="Right"/>
+                <Label x:Name="Label_SelectRomExtractPath" Grid.Row="0" Content="加载已经解压好的Rom目录" HorizontalAlignment="Left" Margin="10,18,0,0" VerticalAlignment="Top" Padding="0"/>
+                <Button x:Name="Btn_ExtractRomFile" Grid.Row="1" MaxWidth="160" Content="Rom解包" VerticalAlignment="Center" Height="26" Margin="0,12,29,12" HorizontalAlignment="Right" Width="120"/>
 
-            <DockPanel DockPanel.Dock="Right">
-                <TextBlock x:Name="OriginalText" Background="#FFFFFDE4" Width="485" IsEnabled="False" HorizontalAlignment="Left"/>
-                <TextBlock x:Name="TranslatedText" Background="#FFDCFFDC" Width="485" IsEnabled="False" HorizontalAlignment="Right" DockPanel.Dock="Right"/>
-            </DockPanel>
-        </DockPanel>
+                <Label x:Name="Label_ExtractRomToPath" Grid.Row="1" Content="解包Rom文件到指定目录" HorizontalAlignment="Left" Margin="10,18,0,0" VerticalAlignment="Top" Padding="0"/>
+                <Button x:Name="Btn_ExportOriginalText" Grid.Row="2" MaxWidth="160" Content="获取翻译文本" VerticalAlignment="Center" Height="26" Margin="0,12,29,12" HorizontalAlignment="Right" Width="120"/>
+
+                <Label x:Name="Label_ExportXMLFile" Grid.Row="2" Content="将指定格式转换成xml文件" HorizontalAlignment="Left" Margin="10,18,0,0" VerticalAlignment="Top" Padding="0"/>
+                <Button x:Name="Btn_ExportTextPicture" Grid.Row="3" MaxWidth="160" Content="获取文本图片" VerticalAlignment="Center" Height="26" Margin="0,12,29,12" HorizontalAlignment="Right" Width="120"/>
+
+                <Label x:Name="Label_ExportTextPicture" Grid.Row="3" Content="将指定格式图片导出目录" HorizontalAlignment="Left" Margin="10,18,0,0" VerticalAlignment="Top" Padding="0"/>
+                <Button x:Name="Btn_FontConverter" Grid.Row="4" MaxWidth="160" Content="字体文件处理" VerticalAlignment="Center" Height="26" Margin="0,12,29,12" HorizontalAlignment="Right" Width="120"/>
+
+                <Label x:Name="Label_HandleFont" Grid.Row="4" Content="处理字库文件到指定目录" HorizontalAlignment="Left" Margin="10,18,0,0" VerticalAlignment="Top" Padding="0"/>
+                <Button x:Name="Btn_BuildRomFile" Grid.Row="5" MaxWidth="160" Content="Rom封包" VerticalAlignment="Center" Height="26" Margin="0,12,29,12" HorizontalAlignment="Right" Width="120"/>
+
+                <Label x:Name="Label_BuildRomToPath" Grid.Row="5" Content="将指定的目录封包成Rom" HorizontalAlignment="Left" Margin="10,18,0,0" VerticalAlignment="Top" Padding="0"/>
+                <Button x:Name="Btn_LoadRomFileDirectory" Grid.Row="0" MaxWidth="160" Content="加载解包目录" VerticalAlignment="Center" Height="26" Margin="0,12,29,12" HorizontalAlignment="Right" Width="120"/>
+
+                <TreeView x:Name="TreeView_DirectoryTree" Grid.Row="6" Background="#FFC3C3C3" Margin="0,2,0,0"/>
+            </Grid>
+        </Border>
+        <Border x:Name="RightGridBorder" Grid.Column="1" BorderBrush="Black" BorderThickness="1">
+            <Grid x:Name="RightGrid" Background="#FFF5FFE4" MinWidth="640" Margin="0,2,0,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="452*"/>
+                    <ColumnDefinition Width="471*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+
+                <!-- 第一行 -->
+                <Label Grid.Row="0" x:Name="Label_ExistRomPath" Content="Rom目录" HorizontalAlignment="Left" Margin="10,17,0,0" VerticalAlignment="Top" Padding="0" Height="15" Width="51"/>
+                <TextBox Grid.Row="0" x:Name="TextBox_ExtractedRomPath" Margin="85,13,127,13" TextWrapping="Wrap" VerticalContentAlignment="Center" VerticalAlignment="Center" Height="24"/>
+                <Button Grid.Row="0" x:Name="Btn_SelectRomDirectory" Content="浏览目录" Margin="0,13,19,13" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Right" Width="80"/>
+
+                <!-- 第二行 -->
+                <Label Grid.Row="1" x:Name="Label_OriginalRomFile" Content="Rom文件" HorizontalAlignment="Left" Margin="10,17,0,18" Padding="0" Width="51"/>
+                <TextBox Grid.Row="1" x:Name="TextBox_OrignalRomFilePath" Margin="85,12,127,14" TextWrapping="Wrap" VerticalContentAlignment="Center" Height="24" VerticalAlignment="Center"/>
+                <Button Grid.Row="1" x:Name="Btn_SelectRomPath" Content="浏览文件" Margin="0,13,19,13" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Right" Width="80"/>
+                <Label Grid.Row="1" x:Name="Label_TargetRomExtractPath" Content="解压目录" Margin="22,17,401,18" Padding="0" Grid.Column="1"/>
+                <TextBox Grid.Row="1" x:Name="TextBox_TargetRomExtractPath" Margin="95,13,136,13" TextWrapping="Wrap" VerticalContentAlignment="Center" Grid.Column="1"/>
+                <Button Grid.Row="1" x:Name="Btn_SelectTargetExtractPath" Content="浏览目录" Margin="0,13,31,13" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" RenderTransformOrigin="0.488,0.583" HorizontalAlignment="Right" Width="80" Grid.Column="1"/>
+
+                <!-- 第三行 -->
+                <Label Grid.Row="2" x:Name="Label_OriginalTextExtension" Content="原始文本扩展名" HorizontalAlignment="Left" Margin="10,17,0,0" VerticalAlignment="Top" Padding="0" Height="15" ToolTip="提示：请以&quot;*.mbm,*.tbb&quot;此类格式填写，以逗号分隔，必须全为半角符号"/>
+                <TextBox Grid.Row="2" x:Name="TextBox_OriginalTextExtension" Margin="110,13,102,13" TextWrapping="Wrap" VerticalContentAlignment="Center" VerticalAlignment="Center" Height="24"/>
+                <Label Grid.Row="2" x:Name="Label_TargetTextExportPath" Content="导出目录" Margin="22,17,401,18" Padding="0" Grid.Column="1"/>
+                <TextBox Grid.Row="2" x:Name="TextBox_TargetTextExportPath" Margin="95,13,136,13" TextWrapping="Wrap" VerticalContentAlignment="Center" Grid.Column="1"/>
+                <Button Grid.Row="2" x:Name="Btn_SelectTargetTextExportPath" Content="浏览目录" Margin="0,13,31,13" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" RenderTransformOrigin="0.488,0.583" HorizontalAlignment="Right" Width="80" Grid.Column="1"/>
+
+                <!-- 第四行 -->
+                <Label Grid.Row="3" x:Name="Label_OriginalPicExtension" Content="原始图片扩展名" HorizontalAlignment="Left" Margin="10,17,0,0" VerticalAlignment="Top" Padding="0" Height="15" ToolTip="提示：请以&quot;*.png,*.stex&quot;此类格式填写，以逗号分隔，必须全为半角符号"/>
+                <TextBox Grid.Row="3" x:Name="TextBox_OriginalPicExtension" Margin="110,13,102,13" TextWrapping="Wrap" VerticalContentAlignment="Center" VerticalAlignment="Center" Height="24"/>
+                <Label Grid.Row="3" x:Name="Label_TargetPicExportPath" Content="导出目录" Margin="22,17,401,18" Padding="0" Grid.Column="1"/>
+                <TextBox Grid.Row="3" x:Name="TextBox_TargetPicExportPath" Margin="95,13,136,13" TextWrapping="Wrap" VerticalContentAlignment="Center" Grid.Column="1"/>
+                <Button Grid.Row="3" x:Name="Btn_SelectTargetPicExportPath" Content="浏览目录" Margin="0,13,31,13" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" RenderTransformOrigin="0.488,0.583" HorizontalAlignment="Right" Width="80" Grid.Column="1"/>
+
+            </Grid>
+        </Border>
     </Grid>
 </Window>
